[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Player/Powers/EMPBlast.gd" type="Script" id=1]
[ext_resource path="res://Entities/Shared/Behaviors/Stunned.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Player/PlayerEMP.png" type="Texture" id=3]




[node name="EMP" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
collision_mask = 24
script = ExtResource( 1 )
stunBehavior = ExtResource( 2 )

[node name="EMPSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Lifetime" type="Timer" parent="."]
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0.291219, -9.72232, 10.757, -8.53751, 21.5191, -1.82358, 28.628, 9.72833, -28.243, 9.72833, -22.1215, -0.638769, -11.162, -8.14257 )

[connection signal="area_entered" from="." to="." method="_on_EMP_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EMP_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
